[gd_scene load_steps=44 format=1]

[ext_resource path="res://hollyhock_time_management.gd" type="Script" id=1]
[ext_resource path="res://time_management_background.png" type="Texture" id=2]
[ext_resource path="res://hollyhock_queue.png" type="Texture" id=3]
[ext_resource path="res://pixels_font.fnt" type="BitmapFont" id=4]
[ext_resource path="res://customer.tscn" type="PackedScene" id=5]
[ext_resource path="res://button.png" type="Texture" id=6]

[sub_resource type="ConvexPolygonShape2D" id=38]

custom_solver_bias = 0.0
points = Vector2Array( -4.16951, 9.83255, -0.0254736, 9.78349, -0.0402994, 10.02, -4.46684, 10.0288 )

[sub_resource type="ConvexPolygonShape2D" id=39]

custom_solver_bias = 0.0
points = Vector2Array( -4.16951, 9.83255, -4.46684, 10.0288, -4.524, 5.94258, -4.20668, 6.21837 )

[sub_resource type="ConvexPolygonShape2D" id=40]

custom_solver_bias = 0.0
points = Vector2Array( -4.20668, 6.21837, -4.524, 5.94258, -1.6103, 5.89935, -1.36815, 6.17503 )

[sub_resource type="ConvexPolygonShape2D" id=41]

custom_solver_bias = 0.0
points = Vector2Array( -1.3124, 4.42518, -1.36815, 6.17503, -1.6103, 5.89935, -1.59754, 4.7189 )

[sub_resource type="ConvexPolygonShape2D" id=42]

custom_solver_bias = 0.0
points = Vector2Array( -8.68521, 4.4683, -1.3124, 4.42518, -1.59754, 4.7189, -9.03654, 4.7059 )

[sub_resource type="ConvexPolygonShape2D" id=43]

custom_solver_bias = 0.0
points = Vector2Array( -8.68521, 4.4683, -9.03654, 4.7059, -9.03829, -8.79321, -8.62947, -8.53155 )

[sub_resource type="ConvexPolygonShape2D" id=44]

custom_solver_bias = 0.0
points = Vector2Array( -8.62947, -8.53155, -9.03829, -8.79321, 7.7787, -9.05035, 7.28086, -8.46721 )

[sub_resource type="ConvexPolygonShape2D" id=45]

custom_solver_bias = 0.0
points = Vector2Array( 7.28086, -8.46721, 7.7787, -9.05035, 7.7787, -2.63651, 7.30639, -1.93435 )

[sub_resource type="ConvexPolygonShape2D" id=46]

custom_solver_bias = 0.0
points = Vector2Array( 9.52752, -1.93435, 7.30639, -1.93435, 7.7787, -2.63651, 9.52752, -2.63651 )

[sub_resource type="ConvexPolygonShape2D" id=47]

custom_solver_bias = 0.0
points = Vector2Array( 4.22418, 2.00994, 9.69689, 2.04362, 9.56872, 2.40061, 3.94643, 2.32624 )

[sub_resource type="ConvexPolygonShape2D" id=48]

custom_solver_bias = 0.0
points = Vector2Array( 4.22418, 2.00994, 3.94643, 2.32624, 3.87342, -4.96273, 4.05945, -5.40962 )

[sub_resource type="ConvexPolygonShape2D" id=49]

custom_solver_bias = 0.0
points = Vector2Array( -4.79937, -5.30859, 4.05945, -5.40962, 3.87342, -4.96273, -4.59652, -4.96273 )

[sub_resource type="ConvexPolygonShape2D" id=50]

custom_solver_bias = 0.0
points = Vector2Array( -4.78106, 1.68702, -4.79937, -5.30859, -4.59652, -4.96273, -4.5956, 1.43167 )

[sub_resource type="ConvexPolygonShape2D" id=51]

custom_solver_bias = 0.0
points = Vector2Array( 1.14922, 1.77121, -4.78106, 1.68702, -4.5956, 1.43167, 1.48059, 1.39266 )

[sub_resource type="ConvexPolygonShape2D" id=52]

custom_solver_bias = 0.0
points = Vector2Array( 1.14922, 1.77121, 1.48059, 1.39266, 1.49336, 5.99075, 1.35056, 6.29769 )

[sub_resource type="ConvexPolygonShape2D" id=53]

custom_solver_bias = 0.0
points = Vector2Array( 4.04115, 6.29769, 1.35056, 6.29769, 1.49336, 5.99075, 4.32722, 5.96475 )

[sub_resource type="ConvexPolygonShape2D" id=54]

custom_solver_bias = 0.0
points = Vector2Array( 4.04115, 6.29769, 4.32722, 5.96475, 4.35231, 10.1646, 4.02285, 9.92886 )

[sub_resource type="ConvexPolygonShape2D" id=55]

custom_solver_bias = 0.0
points = Vector2Array( 4.02285, 9.92886, 4.35231, 10.1646, -0.27844, 10.1983, -0.260136, 9.92886 )

[sub_resource type="ConvexPolygonShape2D" id=19]

custom_solver_bias = 0.0
points = Vector2Array( -4.04742, 9.67421, -0.0402994, 9.63096, -0.0402994, 10.02, -4.58058, 10.02 )

[sub_resource type="ConvexPolygonShape2D" id=20]

custom_solver_bias = 0.0
points = Vector2Array( -4.04742, 9.67421, -4.58058, 10.02, -4.524, 5.94258, -4.07295, 6.40248 )

[sub_resource type="ConvexPolygonShape2D" id=21]

custom_solver_bias = 0.0
points = Vector2Array( -4.07295, 6.40248, -4.524, 5.94258, -1.6103, 5.89935, -1.14973, 6.37049 )

[sub_resource type="ConvexPolygonShape2D" id=22]

custom_solver_bias = 0.0
points = Vector2Array( -1.13697, 4.10797, -1.14973, 6.37049, -1.6103, 5.89935, -1.59754, 4.7189 )

[sub_resource type="ConvexPolygonShape2D" id=23]

custom_solver_bias = 0.0
points = Vector2Array( -8.55555, 4.12098, -1.13697, 4.10797, -1.59754, 4.7189, -9.03654, 4.7059 )

[sub_resource type="ConvexPolygonShape2D" id=24]

custom_solver_bias = 0.0
points = Vector2Array( -8.55555, 4.12098, -9.03654, 4.7059, -9.06207, -9.06335, -8.56831, -8.4542 )

[sub_resource type="ConvexPolygonShape2D" id=25]

custom_solver_bias = 0.0
points = Vector2Array( -8.56831, -8.4542, -9.06207, -9.06335, 7.7787, -9.05035, 7.28086, -8.46721 )

[sub_resource type="ConvexPolygonShape2D" id=26]

custom_solver_bias = 0.0
points = Vector2Array( 7.28086, -8.46721, 7.7787, -9.05035, 7.7787, -2.63651, 7.30639, -1.93435 )

[sub_resource type="ConvexPolygonShape2D" id=27]

custom_solver_bias = 0.0
points = Vector2Array( 9.52752, -1.93435, 7.30639, -1.93435, 7.7787, -2.63651, 9.52752, -2.63651 )

[sub_resource type="ConvexPolygonShape2D" id=28]

custom_solver_bias = 0.0
points = Vector2Array( 9.4957, 1.87997, 9.56872, 2.40061, 3.94643, 2.32624, 4.53057, 1.8056 )

[sub_resource type="ConvexPolygonShape2D" id=29]

custom_solver_bias = 0.0
points = Vector2Array( 4.53057, 1.8056, 3.94643, 2.32624, 3.87342, -4.96273, 4.38453, -5.409 )

[sub_resource type="ConvexPolygonShape2D" id=30]

custom_solver_bias = 0.0
points = Vector2Array( -5.03462, -5.48337, 4.38453, -5.409, 3.87342, -4.96273, -4.59652, -4.96273 )

[sub_resource type="ConvexPolygonShape2D" id=31]

custom_solver_bias = 0.0
points = Vector2Array( -5.01151, 1.93492, -5.03462, -5.48337, -4.59652, -4.96273, -4.5956, 1.43167 )

[sub_resource type="ConvexPolygonShape2D" id=32]

custom_solver_bias = 0.0
points = Vector2Array( 0.975328, 1.97393, -5.01151, 1.93492, -4.5956, 1.43167, 1.48059, 1.39266 )

[sub_resource type="ConvexPolygonShape2D" id=33]

custom_solver_bias = 0.0
points = Vector2Array( 0.975328, 1.97393, 1.48059, 1.39266, 1.49336, 5.99075, 1.03915, 6.48957 )

[sub_resource type="ConvexPolygonShape2D" id=34]

custom_solver_bias = 0.0
points = Vector2Array( 3.88402, 6.50258, 1.03915, 6.48957, 1.49336, 5.99075, 4.32722, 5.96475 )

[sub_resource type="ConvexPolygonShape2D" id=35]

custom_solver_bias = 0.0
points = Vector2Array( 3.88402, 6.50258, 4.32722, 5.96475, 4.39104, 10.0123, 3.90955, 9.65678 )

[sub_resource type="ConvexPolygonShape2D" id=36]

custom_solver_bias = 0.0
points = Vector2Array( 3.90955, 9.65678, 4.39104, 10.0123, -0.00015831, 10.0513, 0.0126076, 9.68721 )

[sub_resource type="RectangleShape2D" id=37]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="time_management" type="Node2D"]

transform/pos = Vector2( 511.872, 307.75 )
transform/scale = Vector2( 15.9499, 9.65829 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 0.0805756, -0.151506 )
transform/scale = Vector2( 0.100623, 0.15875 )
texture = ExtResource( 2 )

[node name="queue_background" type="Sprite" parent="."]

transform/pos = Vector2( -15.07, 1.76425 )
transform/scale = Vector2( 0.0382583, 0.0769319 )
texture = ExtResource( 3 )

[node name="right_half" type="Sprite" parent="."]

transform/pos = Vector2( 14.5597, -0.571426 )
transform/scale = Vector2( 0.0382583, 0.0801238 )
texture = ExtResource( 3 )
flip_h = true
flip_v = true

[node name="day_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 120.0
one_shot = false
autostart = true

[node name="countdown_timer" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -15.0
margin/top = -11.0
margin/right = 25.0
margin/bottom = 24.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="successes" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -6.0
margin/top = 8.0
margin/right = 34.0
margin/bottom = 43.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="customer" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( -12.2391, 26.2316 )
transform/scale = Vector2( 0.0359815, 0.0615258 )

[node name="queue" type="StaticBody2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 38 )
shapes/0/transform = Matrix32( 1.64533, 0, 0, 3.08754, -15.1528, 0.667069 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 39 )
shapes/1/transform = Matrix32( 1.64533, 0, 0, 3.08754, -15.1528, 0.667069 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 40 )
shapes/2/transform = Matrix32( 1.64533, 0, 0, 3.08754, -15.1528, 0.667069 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 41 )
shapes/3/transform = Matrix32( 1.64533, 0, 0, 3.08754, -15.1528, 0.667069 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 42 )
shapes/4/transform = Matrix32( 1.64533, 0, 0, 3.08754, -15.1528, 0.667069 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 43 )
shapes/5/transform = Matrix32( 1.64533, 0, 0, 3.08754, -15.1528, 0.667069 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 44 )
shapes/6/transform = Matrix32( 1.64533, 0, 0, 3.08754, -15.1528, 0.667069 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 45 )
shapes/7/transform = Matrix32( 1.64533, 0, 0, 3.08754, -15.1528, 0.667069 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 46 )
shapes/8/transform = Matrix32( 1.64533, 0, 0, 3.08754, -15.1528, 0.667069 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 47 )
shapes/9/transform = Matrix32( 1.67048, 0, 0, 2.9987, -14.7373, 1.15079 )
shapes/9/trigger = false
shapes/10/shape = SubResource( 48 )
shapes/10/transform = Matrix32( 1.67048, 0, 0, 2.9987, -14.7373, 1.15079 )
shapes/10/trigger = false
shapes/11/shape = SubResource( 49 )
shapes/11/transform = Matrix32( 1.67048, 0, 0, 2.9987, -14.7373, 1.15079 )
shapes/11/trigger = false
shapes/12/shape = SubResource( 50 )
shapes/12/transform = Matrix32( 1.67048, 0, 0, 2.9987, -14.7373, 1.15079 )
shapes/12/trigger = false
shapes/13/shape = SubResource( 51 )
shapes/13/transform = Matrix32( 1.67048, 0, 0, 2.9987, -14.7373, 1.15079 )
shapes/13/trigger = false
shapes/14/shape = SubResource( 52 )
shapes/14/transform = Matrix32( 1.67048, 0, 0, 2.9987, -14.7373, 1.15079 )
shapes/14/trigger = false
shapes/15/shape = SubResource( 53 )
shapes/15/transform = Matrix32( 1.67048, 0, 0, 2.9987, -14.7373, 1.15079 )
shapes/15/trigger = false
shapes/16/shape = SubResource( 54 )
shapes/16/transform = Matrix32( 1.67048, 0, 0, 2.9987, -14.7373, 1.15079 )
shapes/16/trigger = false
shapes/17/shape = SubResource( 55 )
shapes/17/transform = Matrix32( 1.67048, 0, 0, 2.9987, -14.7373, 1.15079 )
shapes/17/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="queue"]

transform/pos = Vector2( -15.1528, 0.667069 )
transform/scale = Vector2( 1.64533, 3.08754 )
build_mode = 0
polygon = Vector2Array( -0.0254736, 9.78349, -0.0402994, 10.02, -4.46684, 10.0288, -4.524, 5.94258, -1.6103, 5.89935, -1.59754, 4.7189, -9.03654, 4.7059, -9.03829, -8.79321, 7.7787, -9.05035, 7.7787, -2.63651, 9.52752, -2.63651, 9.52752, -1.93435, 7.30639, -1.93435, 7.28086, -8.46721, -8.62947, -8.53155, -8.68521, 4.4683, -1.3124, 4.42518, -1.36815, 6.17503, -4.20668, 6.21837, -4.16951, 9.83255 )
shape_range = Vector2( 0, 8 )
trigger = false

[node name="CollisionPolygon2D1" type="CollisionPolygon2D" parent="queue"]

transform/pos = Vector2( -14.7373, 1.15079 )
transform/scale = Vector2( 1.67048, 2.9987 )
build_mode = 0
polygon = Vector2Array( -0.260136, 9.92886, -0.27844, 10.1983, 4.35231, 10.1646, 4.32722, 5.96475, 1.49336, 5.99075, 1.48059, 1.39266, -4.5956, 1.43167, -4.59652, -4.96273, 3.87342, -4.96273, 3.94643, 2.32624, 9.56872, 2.40061, 9.69689, 2.04362, 4.22418, 2.00994, 4.05945, -5.40962, -4.79937, -5.30859, -4.78106, 1.68702, 1.14922, 1.77121, 1.35056, 6.29769, 4.04115, 6.29769, 4.02285, 9.92886 )
shape_range = Vector2( 9, 17 )
trigger = false

[node name="queue_right_half" type="StaticBody2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 19 )
shapes/0/transform = Matrix32( -1.67896, 0, 0, -3.19697, 14.1512, 0.254574 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 20 )
shapes/1/transform = Matrix32( -1.67896, 0, 0, -3.19697, 14.1512, 0.254574 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 21 )
shapes/2/transform = Matrix32( -1.67896, 0, 0, -3.19697, 14.1512, 0.254574 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 22 )
shapes/3/transform = Matrix32( -1.67896, 0, 0, -3.19697, 14.1512, 0.254574 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 23 )
shapes/4/transform = Matrix32( -1.67896, 0, 0, -3.19697, 14.1512, 0.254574 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 24 )
shapes/5/transform = Matrix32( -1.67896, 0, 0, -3.19697, 14.1512, 0.254574 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 25 )
shapes/6/transform = Matrix32( -1.67896, 0, 0, -3.19697, 14.1512, 0.254574 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 26 )
shapes/7/transform = Matrix32( -1.67896, 0, 0, -3.19697, 14.1512, 0.254574 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 27 )
shapes/8/transform = Matrix32( -1.67896, 0, 0, -3.19697, 14.1512, 0.254574 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 28 )
shapes/9/transform = Matrix32( -1.59595, 0, 0, -3.15285, 14.5165, 0.236573 )
shapes/9/trigger = false
shapes/10/shape = SubResource( 29 )
shapes/10/transform = Matrix32( -1.59595, 0, 0, -3.15285, 14.5165, 0.236573 )
shapes/10/trigger = false
shapes/11/shape = SubResource( 30 )
shapes/11/transform = Matrix32( -1.59595, 0, 0, -3.15285, 14.5165, 0.236573 )
shapes/11/trigger = false
shapes/12/shape = SubResource( 31 )
shapes/12/transform = Matrix32( -1.59595, 0, 0, -3.15285, 14.5165, 0.236573 )
shapes/12/trigger = false
shapes/13/shape = SubResource( 32 )
shapes/13/transform = Matrix32( -1.59595, 0, 0, -3.15285, 14.5165, 0.236573 )
shapes/13/trigger = false
shapes/14/shape = SubResource( 33 )
shapes/14/transform = Matrix32( -1.59595, 0, 0, -3.15285, 14.5165, 0.236573 )
shapes/14/trigger = false
shapes/15/shape = SubResource( 34 )
shapes/15/transform = Matrix32( -1.59595, 0, 0, -3.15285, 14.5165, 0.236573 )
shapes/15/trigger = false
shapes/16/shape = SubResource( 35 )
shapes/16/transform = Matrix32( -1.59595, 0, 0, -3.15285, 14.5165, 0.236573 )
shapes/16/trigger = false
shapes/17/shape = SubResource( 36 )
shapes/17/transform = Matrix32( -1.59595, 0, 0, -3.15285, 14.5165, 0.236573 )
shapes/17/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="queue_right_half"]

transform/pos = Vector2( 14.1512, 0.254574 )
transform/scale = Vector2( -1.67896, -3.19697 )
build_mode = 0
polygon = Vector2Array( -0.0402994, 9.63096, -0.0402994, 10.02, -4.58058, 10.02, -4.524, 5.94258, -1.6103, 5.89935, -1.59754, 4.7189, -9.03654, 4.7059, -9.06207, -9.06335, 7.7787, -9.05035, 7.7787, -2.63651, 9.52752, -2.63651, 9.52752, -1.93435, 7.30639, -1.93435, 7.28086, -8.46721, -8.56831, -8.4542, -8.55555, 4.12098, -1.13697, 4.10797, -1.14973, 6.37049, -4.07295, 6.40248, -4.04742, 9.67421 )
shape_range = Vector2( 0, 8 )
trigger = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D1" type="CollisionPolygon2D" parent="queue_right_half"]

transform/pos = Vector2( 14.5165, 0.236573 )
transform/scale = Vector2( -1.59595, -3.15285 )
build_mode = 0
polygon = Vector2Array( 0.0126076, 9.68721, -0.00015831, 10.0513, 4.39104, 10.0123, 4.32722, 5.96475, 1.49336, 5.99075, 1.48059, 1.39266, -4.5956, 1.43167, -4.59652, -4.96273, 3.87342, -4.96273, 3.94643, 2.32624, 9.56872, 2.40061, 9.4957, 1.87997, 4.53057, 1.8056, 4.38453, -5.409, -5.03462, -5.48337, -5.01151, 1.93492, 0.975328, 1.97393, 1.03915, 6.48957, 3.88402, 6.50258, 3.90955, 9.65678 )
shape_range = Vector2( 9, 17 )
trigger = false
__meta__ = {
"_edit_lock_": true
}

[node name="goal" type="StaticBody2D" parent="."]

transform/pos = Vector2( 12.7485, -25.0522 )
transform/scale = Vector2( 0.385861, 0.539875 )
input/pickable = true
shapes/0/shape = SubResource( 37 )
shapes/0/transform = Matrix32( 0.368285, 0, 0, 0.289793, 5.92443, -1.0902 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="collision" type="CollisionShape2D" parent="goal"]

transform/pos = Vector2( 5.92443, -1.0902 )
transform/scale = Vector2( 0.368285, 0.289793 )
shape = SubResource( 37 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="goal"]

transform/pos = Vector2( 6.14355, -1.22857 )
transform/scale = Vector2( 0.0351551, 0.0592772 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="day_timer" to="." method="_on_day_timer_timeout"]


